# open-ephys-audio

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
oeaudio/: __init__.py  core.py  script.py
