[metadata]
name = open-ephys-audio
version = attr: oeaudio.version
description = Scripts for acoustic stimulus presentation with open-ephys
long_description = file: README.md
keywords = one, two
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[bdist_wheel]
universal = 1
[pep8]
ignore=E221,E501,E701
