[bdist_wheel]
universal = 1

[pep8]
ignore=E221,E501,E701

[metadata]
name = open-ephys-audio
version = attr: oeaudio.__version__
description = Scripts for acoustic stimulus presentation with open-ephys
long_description = file: README.md
keywords = one, two
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
author = Dan Meliza
author_email = dan@meliza.org
maintainer = Dan Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/open-ephys-audio

[options]
packages = find:
install_requires =
    sounddevice
    pyzmq
    soundfile
    PyYAML

[options.packages.find]
exclude = *test*
